--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.application.name=macros_v2
 
 spring.config.import=optional:file:.env[.properties]
+
+api.security.token.secret=${TOKEN_SECRET}
