raw: add allow cors origin property

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.application.name=macros_v2
 spring.config.import=optional:file:.env[.properties]
 
 api.security.token.secret=${TOKEN_SECRET}
+
+app.cors.allowed-origins=${ALLOW_CORS_ORIGIN}
