ci: add ALLOW_CORS_ORIGIN env var to maven yaml file

--- a/.github/workflows/maven.yaml
+++ b/.github/workflows/maven.yaml
@@ -44,4 +44,5 @@ jobs:
           DB_PASSWORD: root
           DB_DDL_AUTO: create-drop
           TOKEN_SECRET: my-secret
+          ALLOW_CORS_ORIGIN: https://localhost:5173
         run: mvn -B clean package
